# llm-link

./: .ai-tools-ignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  HOT_RELOAD_API.md  LICENSE  README.md  RELEASE-NOTES-v0.5.0.md  config-glm-ollama.yaml  llm-link.example.yaml  llm-link.yaml  package-lock.json  test_all_providers.sh  test_api.sh  test_glm46_stream.sh  test_hot_reload.py
.qoder/: settings.json
admin/: package-lock.json  package.json
configs/: README.md  codex-cli.yaml  config-codex-env.yaml  config-codex-https-port.yaml  config-codex-pure-openai.yaml  config-codex-standard.yaml  config-codex-with-auth.yaml  config-codex.yaml  config-dual-protocol.yaml  config-env-vars.yaml  config-glm-ollama-noauth.yaml  config-glm-ollama.yaml  config-multi-provider.yaml  config-ollama-only.yaml  config-openai-codex.yaml  config-openai-only.yaml  config-openai-standard-port.yaml  config-zed-final.yaml  llm-link.yaml  models.yaml  models.yaml.example
docs/: API_PROVIDERS_MODELS.md  APPLICATION_SUPPORT.md  ARCHITECTURE.md  CHANGELOG_XML_CONVERSION.md  CLAUDE_CODE_INTEGRATION.md  FILE_STRUCTURE.md  GIT_COMMIT_GUIDE.md  MODEL_CONFIGURATION.md  MODEL_MARKETPLACE.md  MULTI_PROVIDER_EXPANSION.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICK_START.md  README.md  README_ZED.md  REFACTORING.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  TESTING_REPORT_v0.4.20.md  TODOS.md  ZED_INTEGRATION.md  codex-config-example.toml  codex-setup-guide.md  codex-tool-calls-fix-summary.md  streaming-tool-calls-fix.md  zed-dev-compatibility-issues.md
docs-site/: CHECKLIST.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
examples/: ai_model_selector_demo.rs  library_usage.rs  model-overrides.example.yaml
python/: pyproject.toml
rules/: default.md
scripts/: README-ALL-PROVIDERS.md  README-GLM4.md  ZED-QWEN3-CODER-SETUP.md  debug-zed-tools.sh  start-agent-zero.sh  start-aider.sh  start-app.sh  start-codex.sh  start-openhands.sh  start-zed-glm4.sh  start-zed-seed-code.sh  switch-provider.sh  test-blank-tool-fix.sh  test-claude.sh  test-glm4-models.sh  test-openai.sh  test-other-providers.sh  test-qwen3-coder.sh  test-tool-persistence.sh  update-homebrew-formula.sh  verify-deploy.sh  verify-glm46.sh  zed-glm4-quick.sh  zed-qwen3-coder.sh
src/: adapters.rs  apps.rs  client.rs  config.rs  handlers.rs  lib.rs  llm_connector.rs  llm_service.rs  main.rs  models.rs  models.yaml  (+2 more)
(+362 files in other folders)
